@@ -1,5 +1,5 @@
 name    'puppetlabs-acl'
-version '1.0.0'
+version '1.0.1'
 source 'git://github.com/puppetlabs/puppetlabs-acl.git'
 author 'puppetlabs'
 license 'Apache License, Version 2.0'
