@@ -2,7 +2,7 @@
   "requirements": [
     {
       "name": "pe",
-      "version_requirement": "3.3.x"
+      "version_requirement": ">= 3.2.0 < 3.4.0"
     },
     {
       "name": "puppet",
@@ -89,10 +89,6 @@
       ]
     }
   ],
-  "puppet_version": [
-    "3.2",
-    "3.3"
-  ],
   "types": [
     {
       "properties": [
@@ -140,5 +136,5 @@
       "doc": "    Manages access control lists (ACLs).  The `acl` type is\n    typically used when you need more complex management of\n    permissions e.g. Windows. ACLs typically contain access\n    control entries (ACEs) that define a trustee (identity)\n    with a set of rights, whether the type is allow or deny,\n    and how inheritance and propagation of those ACEs are\n    applied to the resource target and child types under it.\n    The order that ACEs are listed in is important on Windows\n    as it determines what is applied first.\n\n    Order of ACE application on Windows is explicit deny,\n    explicit allow, inherited deny, then inherited allow. You\n    cannot specify inherited ACEs in a manifest, only whether\n    to allow upstream inheritance to flow into the managed\n    target location (known as security descriptor). Please\n    ensure your modeled resources follow this order or Windows\n    will complain. NOTE: `acl` type does not enforce or\n    complain about ACE order.\n\n    For very specific examples, see the readme[1] and learn\n    about the different features of the `acl` type.\n\n    [1] https://github.com/puppetlabs/puppetlabs-acl/blob/master/README.md\n\n    **Autorequires:** If Puppet is managing the user, group or\n    target of an acl resource, the acl type will autorequire\n    them.\n\n    At a minimum, you need to provide the target and at least\n    one permission (access control entry or ACE). It will default\n    the other settings to sensible defaults.\n\n    Minimally expressed sample usage:\n\n      acl { \u0027c:/tempperms\u0027:\n        permissions \u003d\u003e [\n         { identity \u003d\u003e \u0027Administrator\u0027, rights \u003d\u003e [\u0027full\u0027] },\n         { identity \u003d\u003e \u0027Users\u0027, rights \u003d\u003e [\u0027read\u0027,\u0027execute\u0027] }\n       ],\n      }\n\n    If you want you can provide a fully expressed ACL. The\n    fully expressed acl in the sample below produces the same\n    settings as the minimal sample above.\n\n    Fully expressed sample usage:\n\n      acl { \u0027c:/tempperms\u0027:\n        target      \u003d\u003e \u0027c:/tempperms\u0027,\n        target_type \u003d\u003e \u0027file\u0027,\n        purge       \u003d\u003e \u0027false\u0027,\n        permissions \u003d\u003e [\n         { identity \u003d\u003e \u0027Administrator\u0027, rights \u003d\u003e [\u0027full\u0027], type\u003d\u003e \u0027allow\u0027, child_types \u003d\u003e \u0027all\u0027, affects \u003d\u003e \u0027all\u0027 },\n         { identity \u003d\u003e \u0027Users\u0027, rights \u003d\u003e [\u0027read\u0027,\u0027execute\u0027], type\u003d\u003e \u0027allow\u0027, child_types \u003d\u003e \u0027all\u0027, affects \u003d\u003e \u0027all\u0027 }\n        ],\n        owner       \u003d\u003e \u0027Administrators\u0027, #Creator_Owner specific, doesn\u0027t manage unless specified\n        group       \u003d\u003e \u0027Users\u0027, #Creator_Group specific, doesn\u0027t manage unless specified\n        inherit_parent_permissions \u003d\u003e \u0027true\u0027,\n      }\n\n    You can manage the same target across multiple acl\n    resources with some caveats. The title of the resource\n    needs to be unique. It is suggested that you only do\n    this when you would need to (can get confusing). You should\n    not set purge \u003d\u003e \u0027true\u0027 on any of the resources that apply\n    to the same target or you will see thrashing in reports as\n    the permissions will be added and removed every catalog\n    application. Use this feature with care.\n\n    Manage same ACL resource multiple acls sample usage:\n\n      acl { \u0027c:/tempperms\u0027:\n        permissions \u003d\u003e [\n         { identity \u003d\u003e \u0027Administrator\u0027, rights \u003d\u003e [\u0027full\u0027] }\n       ],\n      }\n\n      acl { \u0027tempperms_Users\u0027:\n        target      \u003d\u003e \u0027c:/tempperms\u0027,\n        permissions \u003d\u003e [\n         { identity \u003d\u003e \u0027Users\u0027, rights \u003d\u003e [\u0027read\u0027,\u0027execute\u0027] }\n       ],\n      }\n\n    Removing upstream inheritance with purge sample usage:\n\n      acl { \u0027c:/tempperms\u0027:\n        purge       \u003d\u003e \u0027true\u0027,\n        permissions \u003d\u003e [\n         { identity \u003d\u003e \u0027Administrators\u0027, rights \u003d\u003e [\u0027full\u0027] },\n         { identity \u003d\u003e \u0027Users\u0027, rights \u003d\u003e [\u0027full\u0027] }\n        ],\n        inherit_parent_permissions \u003d\u003e \u0027false\u0027,\n      }\n\n     Warning: While managing ACLs you could lock the user running\n     Puppet completely out of managing resources using\n     purge \u003d\u003e \u0027true\u0027 with inherit_parent_permissions \u003d\u003e \u0027false\u0027.\n     If Puppet is locked out of managing the resource, manual\n     intervention on affected nodes will be required.\n\n"
     }
   ],
-  "version": "1.0.0"
+  "version": "1.0.1"
 }
